resources/cna/integration/cna.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
  labels:
    service: cna
  name: cna-integration
spec:
  host: a5df8sfd7k.api.openshift.com
  to:
    kind: Service
    name: cna-management-api
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
